prevent 'jumping' caused by wrong flex calculation

--- a/app/styles/_twiddle-panes.scss
+++ b/app/styles/_twiddle-panes.scss
@@ -30,8 +30,12 @@
     flex: 1;
   }
 
-  .twiddle-pane.file-tree .jstree {
-    margin: 0 10px;
+  .twiddle-pane.file-tree {
+    flex: 0 1 0%;
+
+    .jstree {
+      margin: 0 10px;
+    }
   }
 
   .handle + .twiddle-pane {
